--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>API Reference</title>
+    <link rel='icon' href='images/favicon.ico' type='image/x-icon'>
+    <meta name="theme-color" content="#23cd73">
+    <title>API Reference | Earmark</title>
 
     <style>
       .highlight table td { padding: 5px; }
