--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel='icon' href='images/favicon.ico' type='image/x-icon'>
+    <link href="images/favicon.ico" rel="icon" type="image/ico" />
     <meta name="theme-color" content="#23cd73">
     <title>API Reference | Earmark</title>
 
